--- a/src/assets/scss/pages/promo/sections/_header.scss
+++ b/src/assets/scss/pages/promo/sections/_header.scss
@@ -71,6 +71,8 @@
   margin-left: auto;
   padding: 17px 57px;
 
+  white-space: nowrap;
+
   text-decoration: none;
 
   &:hover {
